﻿			     BZFlag Release Notes
			     ====================

BZFlag 2.0.3
------------
* Directional keys pressing works, even in joy/mouse mode - Tupone Alfredo
* Jitter compensation removed. Too bad behaviour on ME players - Tupone Alfredo
* Put spawn params in BZDB to let server owners mod them as needed - Jeff Myers
* Fixed ban admin bug - Julio Jimenez
* Added /sendhelp command - Mike Weisenborn, Mark Thomas
* /ban /hostban take time keywords (short ...) too - Jeff Myers, Alfredo Tupone
* Inertia style indicatio no more used - Alfredo Tupone
* No more restriction on M (Momentum) flag - Alfredo Tupone
* Fixing authentication when changing callsign/password - Alfredo Tupone
* Fixing authentication when joining from command-line - Alfredo Tupone
* Executing abbreviated server command '*' terminated - Alfredo Tupone
* Getting one-line-help on server command '?' terminated - Alfredo Tupone
* Fixing bzflag use of system-wide regex (--without-regex) - Alfredo Tupone
* Adding destination info to chat message log - Alfredo Tupone
* Adding syntax check to duration parameter of ban cmds - Alfredo Tupone
* Hud outlines go transparent with the hud panel - Jeff Myers, Daniel Mulford
* Better progress info when downloading textures - Garrett Padera, Jeff Myers
* Add Quake3 BSP import to modeltool - Jeff Myers
* Exit BZFS if -g is used with -mts or -mps -  Joshua Rogers
* Experimental server colorizing in server list - Frank Thilo
* Added sort options to "/replay list" and "/record list" - Mark Thomas
* Map mismatch fixed - Alfredo Tupone
* Quick server command key works better - Alfredo Tupone
* Default server side plugins added to windows build - Jeff Myers
* Include web token verification script - Garrett Padera
* Fix texture cache on windows. - Jeff Myers
* Disallow + or @ as first char of callsign (bzfs) - Mark Thomas
* Wait for reverse DNS and authentication to enter game - Alfredo Tupone
* Antiban works even on IP number - Alfredo Tupone