@@ -3,6 +3,7 @@
 
 BZFlag 2.0.3
 ------------
+* Implemented multiple player hunt - Mark Thomas
 * Directional keys pressing works, even in joy/mouse mode - Tupone Alfredo
 * Jitter compensation removed. Too bad behaviour on ME players - Tupone Alfredo
 * Put spawn params in BZDB to let server owners mod them as needed - Jeff Myers
